--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     font-family: prvi;
     src: url('../fonts/PlayfairDisplay-Regular.woff');}
 @font-face{
-    font-family: light;
+    font-family: drugi;
     src: url('../fonts/Roboto-Light.woff');}
 @font-face{
     font-family: treci;
@@ -22,11 +22,9 @@
 /* Body */
 body {
     background: #FFFFFF 0% 0% no-repeat padding-box;
-
     background: transparent url('../images/bg.png') 0% 0% no-repeat padding-box;
     background-position: bottom right;
-    background-position: 200px 250px
-
+    background-position: 100px 225px;
 }
 .space {
     margin-top: 45px;
@@ -39,10 +37,13 @@ body {
 .rows {
     margin-left: 15px;
     margin-right: 15px;
+
 }
 .logo a img {
-    width: 254px;
-    height: 97px;
+    max-width: 254px;
+    max-height: 94px;
+    width: 100%;
+    height: 100%;
 }
 .side {
     display: flex;
@@ -57,16 +58,18 @@ h1 {
     margin-bottom: 20px;
 }
 hr {
-    border: 1px solid #DADADA;
-    width: 460px;
+    border-top: 1px solid #DADADA;
+    max-width: 470px;
+    width: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 h2 {
-    margin-top: 75px;
-    font-family: light;
+    margin-top: 50px;
+    font-family: drugi;
     font-weight: 300;
     color: #505050;
-    font-size: 25px;
-    margin-bottom: 60px;
+    font-size: 26px;
+    margin-bottom: 30px;
 }
 h2 b {
     font-weight: 700;
@@ -75,10 +78,12 @@ h2 b {
     color: #00B8B0;
 }
 /* H4 */
-h4 {
-    font-family: light;
+h4{
     font-weight: 300;
     font-size: 20px;
+    margin-top: 30px;
+    font-family: drugi;
+    margin-top: 50px;
 }
 
 .box {
@@ -86,9 +91,9 @@ h4 {
     box-shadow: 0px 5px 14px #00000022;
     border-radius: 3px;
     padding: 40px;
-    width: 445px;
+    width: 300px;
     max-width: 100%;
-    margin-top: -40px;
+    margin-left: -30px;
 }
 .box form {
     width: 100%;
@@ -103,7 +108,7 @@ h4 {
     font-size: 18px;
     margin-bottom: 7px;
     display: block;
-    font-family: light;
+    font-family: drugi;
 }
 .box .input-box input {
     width: 100%;
@@ -140,7 +145,7 @@ h4 {
 }
 .row:after {
     clear: both;
-}
+}*
 .column {
     color: #fff;
     padding: 20px;
